hphp/test/zend/bad/bug41351.php
<?php

$a = array();

foreach($a[] as $b) {
}

echo "Done\n";
?>